# dgx-lab

./: .cursorignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yaml  nginx.conf
.cursor/: .gitignore
.cursor/agents/: agents-engineer.md  ai-engineer.md  aws-engineer.md  backend-engineer.md  chief-architect.md  designer.md  developer-advocate.md  dgx-spark-expert.md  frontend-engineer.md  gofai-engineer.md  macos-expert.md  ml-engineer.md  scrum-master.md  tailscale.md  technical-writer.md
.cursor/plans/: langsmith_and_agent_integration_6f263d34.plan.md
.cursor/rules/: backend-routers.mdc  design-system.mdc  frontend-components.mdc
.github/: CODEOWNERS
.github/workflows/: docs.yml
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
backend/app/: config.py  cursor_chats.py  logging_config.py  main.py
backend/app/agent/: chain.py  evals.py  personas.py  rag.py  skills.py  tracing.py
backend/app/routers/: agent_chat.py  agents.py  automodel.py  claude_agents.py  control.py  curator.py  datasets.py  designer.py  langsmith_traces.py  logger.py  monitor.py  traces.py
docs/: remote-access.md  setup.md
docs-site/: docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts
docs-site/blog/: 2026-04-07-introducing-dgx-lab.mdx  2026-04-08-first-run-on-your-spark.mdx  2026-04-09-paths-memory-and-config.mdx  2026-04-10-remote-access-lan-tailscale-ssh.mdx  (+2 more)
frontend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  package.json
scripts/: install_faiss_gpu_cuvs_arm.sh
(+119 files in other folders)
