[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for DGX Lab"
requires-python = ">=3.12"
dependencies = [
    "cmake>=4.3.1",
    "fastapi>=0.135.3",
    "huggingface-hub>=1.8.0",
    "langchain>=0.3.25",
    "langchain-aws>=0.2.17",
    "langchain-community>=0.3.24",
    "langsmith>=0.3.42",
    "psutil>=7.2.2",
    "pyarrow>=23.0.1",
    "pyyaml>=6.0.2",
    "sentence-transformers>=4.1.0",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.9.4",
    "black>=26.1.0",
    "coverage>=7.13.4",
    "flake8>=7.3.0",
    "isort>=8.0.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
]
